boardList 기능 완성

--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -7,6 +7,15 @@
     <title>자유게시판 상세보기</title>
 </head>
 <body>
+    <div class="container">
+        <table th:text="">
+            <thead>
 
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
