--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -7,28 +7,30 @@
     <title>자유게시판 목록</title>
 </head>
 <body>
-<div>
     <div>
-        <h3>자유게시판 목록</h3>
+        <div>
+            <h3>자유게시판 목록</h3>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>번호</th>
+                    <th>제목</th>
+                    <th>작성자</th>
+                    <th>작성일</th>
+                    <th>조회수</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="b : ${boardList}">
+                    <td th:text="${b.bno}"></td>
+                    <td th:text="${b.title}"></td>
+                    <td th:text="${b.author}"></td>
+                    <td th:text="${b.regdate}"></td>
+                    <td th:text="${b.visited}"></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <table>
-        <thead>
-            <tr>
-                <th>번호</th>
-                <th>제목</th>
-                <th>작성일</th>
-                <th>조회수</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-</div>
 </body>
 </html>
