--- a/src/main/resources/templates/board/boardEdit.html
+++ b/src/main/resources/templates/board/boardEdit.html
@@ -5,6 +5,10 @@
     <title>자유게시판 수정하기</title>
 </head>
 <body>
-
+    <div>
+        <div>
+            <h2>자유게시판 수정하기</h2>
+        </div>
+    </div>
 </body>
 </html>
