--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="@{/}">홈</a></li>
+                <li><a th:href="@{/}">홈</a></li>
                 <li>고객센터</li>
-                <a href="@{'/board/boardList'}">자유게시판</a>
+                <a th:href="@{'/board/boardList'}">자유게시판</a>
                 <li></li>
             </ul>
         </nav>
