--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자유게시판 상세보기</title>
 </head>
 <body>
@@ -15,14 +15,19 @@
             <table>
                 <tr>
                     <td><span th:text="${bd.bno}"></span></td>
+                </tr>
+                <tr>
                     <th><span th:text="${bd.title}"></span></th>
                 </tr>
                 <tr>
                     <td><span th:text="${bd.content}"></span></td>
                 </tr>
                 <tr>
+                    <td colspan="2">
                     <a th:href="@{'/board/boardEdit?bno=' + ${bd.bno}}"><button>수정</button></a>
+                    &nbsp;
                     <a th:href="@{'/board/boardDelete?bno=' + ${bd.bno}}"><button>삭제</button></a>
+                    </td>
                 </tr>
             </table>
         </div>
