--- a/src/main/resources/templates/board/boardEdit.html
+++ b/src/main/resources/templates/board/boardEdit.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자유게시판 수정하기</title>
 </head>
 <body>
     <div>
         <div>
             <h2>자유게시판 수정하기</h2>
+        </div>
+        <div  class="container">
+            <form th:action="@{'/board/boardEdit'}" method="post">
+                <table>
+                    <tr>
+                        <th>글 제목</th>
+                        <td>
+                            <input type="hidden" name="bno" id="bno" th:value="${boardEdit.bno}" >
+                            <input type="text" name="title" id="title" placeholder="제목을 입력해주세요." th:value="${boardEdit.title }" maxlength="50" required>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>글 내용</th>
+                        <td>
+                            <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력해주세요." maxlength="1000" required>[[${boardEdit.content}]]</textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <button type="submit">수정</button>
+                            &nbsp;
+                            <button type="reset">취소</button>
+                            &nbsp;
+                            <a href="/board/boardList">글목록1</a>
+                            <button type="button" onclick="location.href='/board/boardList'">글목록2</button>
+                        </td>
+                    </tr>
+                </table>
+            </form>
         </div>
     </div>
 </body>
