--- a/src/main/resources/templates/board/boardInsert.html
+++ b/src/main/resources/templates/board/boardInsert.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자유게시판 글쓰기</title>
 </head>
 <body>
@@ -15,13 +17,13 @@
                     <tr>
                         <th>글 제목</th>
                         <td>
-                            <input type="text" name="title" id="title" placeholder="제목을 입력해주세요.">
+                            <input type="text" name="title" id="title" placeholder="제목을 입력해주세요." maxlength="20" required>
                         </td>
                     </tr>
                     <tr>
                         <th>글 내용</th>
                         <td>
-                            <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력해주세요."></textarea>
+                            <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력해주세요." maxlength="1000" required></textarea>
                         </td>
                     </tr>
                     <tr>
