--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,9 @@
             <ul>
                 <li><a th:href="@{/}">홈</a></li>
                 <li>고객센터</li>
-                <a th:href="@{'/board/boardList'}">자유게시판</a>
+                <a th:href="@{/board/boardList}">자유게시판</a>
+                <br>
+                <a th:href="@{/faq/faqList}">FAQ</a>
                 <li></li>
             </ul>
         </nav>
