--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,8 @@
                 <a th:href="@{/board/boardList}">자유게시판</a>
                 <br>
                 <a th:href="@{/faq/faqList}">FAQ</a>
+                <br>
+                <a th:href="@{/product/productList}">상품</a>
                 <li></li>
             </ul>
         </nav>
