--- a/src/main/resources/templates/product/productInsert.html
+++ b/src/main/resources/templates/product/productInsert.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>상품 글쓰기</title>
 </head>
 <body>
+<div>
+    <div>
+        <h2>상품 글쓰기</h2>
+    </div>
+    <div class="container">
+        <form th:action="@{'/product/productInsert'}" method="post">
+            <table>
+                <tr>
+                    <th>글 제목</th>
+                    <td>
+                        <input type="text" name="title" id="title" placeholder="제목을 입력해주세요." maxlength="20" required>
+                    </td>
+                </tr>
+                <tr>
+                    <th>글 내용</th>
+                    <td>
+                        <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력해주세요." maxlength="1000" required></textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <th>가격</th>
+                    <td>
+                        <input type="text" name="price" id="price" placeholder="가격을 입력하세요" maxlength="20" required>
+                    </td>
+                </tr>
+                <tr>
+                    <th>위치</th>
+                    <td>
+                        <select name="location" id="location">
+                            <option value="1">서울</option>
+                            <option value="2">부산</option>
+                            <option value="3">대구</option>
+                            <option value="4">인천</option>
+                            <option value="5">광주</option>
+                            <option value="6">대전</option>
+                            <option value="7">울산</option>
+                            <option value="8">세종</option>
+                            <option value="9">경기</option>
+                            <option value="10">강원</option>
+                            <option value="11">충북</option>
+                            <option value="12">충남</option>
+                            <option value="13">전북</option>
+                            <option value="14">전남</option>
+                            <option value="15">경북</option>
+                            <option value="16">경남</option>
+                            <option value="17">제주</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        연락방법
+                    </th>
+                    <td>
+                        <input type="text" name="contact" id="contact" placeholder="연락방법을 입력하세요" maxlength="100" required>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <button type="submit">글쓰기</button>
+                        &nbsp;
+                        <button type="reset">취소</button>
+                        &nbsp;
+                        <a href="/product/productList">글목록1</a>
+                        <button type="button" onclick="location.href='/product/productList'">글목록2</button>
+                    </td>
+                </tr>
+            </table>
+        </form>
+    </div>
+</div>
 </body>
 </html>
