--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,7 @@
                 <br>
                 <a th:href="@{/faq/faqList}">FAQ</a>
                 <br>
-                <a th:href="@{/product/productList}">상품</a>
-                <li></li>
+                <li><a th:href="@{/product/productList}">상품</a></li>
             </ul>
         </nav>
     </header>
