--- a/src/main/resources/templates/product/productList.html
+++ b/src/main/resources/templates/product/productList.html
@@ -5,7 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <title>상품 목록</title>
 </head>
 <body>
@@ -32,32 +31,28 @@
                 <td><a th:href="@{'/product/productDetail?pno=' + ${pl.pno}}"><span th:text="${pl.title}"></span></a></td>
                 <td th:text="${pl.price}"></td>
                 <td th:switch="${pl.location}">
-                    <span>
-                        <span th:case="1">서울</span>
-                        <span th:case="2">부산</span>
-                        <span th:case="3">대구</span>
-                        <span th:case="4">인천</span>
-                        <span th:case="5">광주</span>
-                        <span th:case="6">대전</span>
-                        <span th:case="7">울산</span>
-                        <span th:case="8">세종</span>
-                        <span th:case="9">경기</span>
-                        <span th:case="10">강원</span>
-                        <span th:case="11">충북</span>
-                        <span th:case="12">충남</span>
-                        <span th:case="13">전북</span>
-                        <span th:case="14">전남</span>
-                        <span th:case="15">경북</span>
-                        <span th:case="16">경남</span>
-                        <span th:case="17">제주</span>
-                    </span>
+                    <span th:case="1">서울</span>
+                    <span th:case="2">부산</span>
+                    <span th:case="3">대구</span>
+                    <span th:case="4">인천</span>
+                    <span th:case="5">광주</span>
+                    <span th:case="6">대전</span>
+                    <span th:case="7">울산</span>
+                    <span th:case="8">세종</span>
+                    <span th:case="9">경기</span>
+                    <span th:case="10">강원</span>
+                    <span th:case="11">충북</span>
+                    <span th:case="12">충남</span>
+                    <span th:case="13">전북</span>
+                    <span th:case="14">전남</span>
+                    <span th:case="15">경북</span>
+                    <span th:case="16">경남</span>
+                    <span th:case="17">제주</span>
                 </td>
-                <td>
-                    <span th:switch="${pl.status}">
-                        <span th:case="1">판매중</span>
-                        <span th:case="2">예약중</span>
-                        <span th:case="3">판매완료</span>
-                    </span>
+                <td th:switch="${pl.status}">
+                    <span th:case="1">판매중</span>
+                    <span th:case="2">예약중</span>
+                    <span th:case="3">판매완료</span>
                 </td>
                 <td th:text="${pl.author}"></td>
                 <td th:text="${pl.regdate}"></td>
