회원 기능 작성 중

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,12 @@
     <title>TT / 선생님 중고거래</title>
 </head>
 <body>
+    <h1>TT / 선생님 중고거래 홈페이지</h1>
     <header>
         <nav>
             <ul>
                 <li><a th:href="@{/}">홈</a></li>
+                <li><a th:href="@{/user/login}">로그인</a></li>
                 <li>고객센터</li>
                 <a th:href="@{/board/boardList}">자유게시판</a>
                 <br>
@@ -20,6 +22,5 @@
             </ul>
         </nav>
     </header>
-    <h1>TT / 선생님 중고거래 홈페이지</h1>
 </body>
 </html>
