--- a/src/main/resources/templates/board/boardEdit.html
+++ b/src/main/resources/templates/board/boardEdit.html
@@ -7,6 +7,7 @@
     <title>자유게시판 수정하기</title>
 </head>
 <body>
+    <th:block th:replace="layout/header :: header"></th:block>
     <div>
         <div>
             <h2>자유게시판 수정하기</h2>
@@ -15,14 +16,14 @@
             <form th:action="@{'/board/boardEdit'}" method="post">
                 <table>
                     <tr>
-                        <th>글 제목</th>
+                        <th>제목</th>
                         <td>
                             <input type="hidden" name="bno" id="bno" th:value="${boardEdit.bno}" >
                             <input type="text" name="title" id="title" placeholder="제목을 입력해주세요." th:value="${boardEdit.title }" maxlength="50" required>
                         </td>
                     </tr>
                     <tr>
-                        <th>글 내용</th>
+                        <th>내용</th>
                         <td>
                             <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력해주세요." maxlength="1000" required>[[${boardEdit.content}]]</textarea>
                         </td>
