--- a/src/main/resources/templates/board/boardInsert.html
+++ b/src/main/resources/templates/board/boardInsert.html
@@ -7,21 +7,22 @@
     <title>자유게시판 글쓰기</title>
 </head>
 <body>
+    <th:block th:replace="layout/header :: header"></th:block>
     <div>
         <div>
             <h2>자유게시판 글쓰기</h2>
         </div>
         <div class="container">
-            <form th:action="@{'/board/boardInsert'}" method="post">
+            <form th:action="@{/board/boardInsert}" method="post">
                 <table>
                     <tr>
-                        <th>글 제목</th>
+                        <th>제목</th>
                         <td>
                             <input type="text" name="title" id="title" placeholder="제목을 입력해주세요." maxlength="20" required>
                         </td>
                     </tr>
                     <tr>
-                        <th>글 내용</th>
+                        <th>내용</th>
                         <td>
                             <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력해주세요." maxlength="1000" required></textarea>
                         </td>
@@ -32,7 +33,7 @@
                             &nbsp;
                             <button type="reset">취소</button>
                             &nbsp;
-                            <a href="/board/boardList">글목록1</a>
+                            <a th:href="@{/board/boardList}">글목록1</a>
                             <button type="button" onclick="location.href='/board/boardList'">글목록2</button>
                         </td>
                     </tr>
