--- a/src/main/resources/templates/product/productEdit.html
+++ b/src/main/resources/templates/product/productEdit.html
@@ -17,7 +17,7 @@
         <form th:action="@{'/product/productEdit'}" method="post">
             <table>
                 <tr>
-                    <th>글 제목</th>
+                    <th>제목</th>
                     <td>
                         <input type="hidden" name="pno" id="pno" th:value="${productEdit.pno}" >
                         <input type="text" name="title" id="title" placeholder="제목을 입력해주세요." th:value="${productEdit.title}" maxlength="50" required>
@@ -32,7 +32,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>글 내용</th>
+                    <th>내용</th>
                     <td>
                         <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력해주세요." maxlength="1000" required>[[${productEdit.content}]]</textarea>
                     </td>
@@ -73,6 +73,12 @@
                     </th>
                     <td>
                         <input type="text" name="contact" id="contact" placeholder="연락방법을 입력하세요" th:value="${productEdit.contact}" maxlength="100" required>
+                    </td>
+                </tr>
+                <tr>
+                    <th>상품 사진</th>
+                    <td>
+                        <input type="file">
                     </td>
                 </tr>
                 <tr>
